# moodpy

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_SETUP.md  DEVELOPMENT.md  GENERATORS_CATALOG.md  GENERATOR_REORGANIZATION.md  LICENSE  MANIFEST.in  PHASE7_MIGRATION_PLAN.md  PHASE7_MIGRATION_STATUS.md  PROGRESS_TRACKER.md  PYPI_DEPLOYMENT_GUIDE.md  README.md  REFACTORING_PLAN.md  RELEASE_NOTES.md  TEST_DEPLOYMENT_REPORT.md  WORK_RESUMPTION.md  __init__.py  check_dependencies.py  cloze.py  create_github_issues.sh  create_github_project.sh  deploy-prod.sh  deploy-test.sh  generator.py  github_issues_template.md  migrate_generator.py  pyproject.toml  setup-pypi-config.sh  tools.py  upload_test_pypi.sh  verify_package.py
.github/: ai-manifest.json  copilot-instructions.md
.github/instructions/: i-hate-emojis.instructions.md
.github/prompts/: commit.prompt.md  publish-to-pipy.prompt.md  release-new-version.prompt.md  summarize-changes.prompt.md  tag-new-version.prompt.md  update-documentation.prompt.md
.github/workflows/: publish.yml
20.1/: matfin.py  moodpy - Copy (2).py  moodpy - Copy (3).py  moodpy - Copy (4).py  moodpy - Copy.py  moodpy-Copy1.py  moodpy.py  tools.py
20.1/.ipynb_checkpoints/: moodpy-checkpoint.py
20.1/templates/funk/: funk_blank.ipynb  funk_generator.ipynb  funk_testing.ipynb  funktions.py
20.1/templates/funk/.ipynb_checkpoints/: funk_blank-checkpoint.ipynb  funk_generator-checkpoint.ipynb  funk_template-checkpoint.ipynb  funk_testing-checkpoint.ipynb
20.1/templates/funk/0/: __0___2020-05-26_16-35-01-684531.xml
20.1/templates/funk/0 (Unicode Encoding Conflict 1)/: __0___2020-06-05_12-28-39-377387.xml
20.1/templates/funk/0 (Unicode Encoding Conflict 2)/: __0___2020-06-05_12-28-39-538585.xml
20.1/templates/funk/0 (Unicode Encoding Conflict)/: __0___2020-05-26_16-35-01-896097.xml
20.1/templates/funk_old/: funk_template_old.ipynb  funktions.ipynb  funktions.py
20.1/templates/funk_old/.ipynb_checkpoints/: funk_template-checkpoint.ipynb
20.1/templates/funk_old/Materia Clave Tema/: materia_clave_tema_2020-05-24_00-36-31-686111.xml  materia_clave_tema_2020-05-24_00-36-31-800121.xml
20.1/templates/rollover/: RollOver Template.ipynb
20.1/templates/standard/: Standard Template.ipynb
20.2/: moodpy - Copy.py  moodpy.py  tools - Copy (2).py  tools - Copy.py  tools.py
MATEMÁTICAS FINANCIERAS_FIN_valor presente neto/: TESTING-matemáticas_financieras_fin_valor_presente_neto_20250913_192030672305.txt
MICROECONOMÍA_MIC_punto de equilibrio/: TESTING-microeconomía_mic_punto_de_equilibrio_20250913_191701035637.txt
examples/: README.md  __init__.py  demo.py
examples/basic/: __init__.py  arithmetic.py
examples/business/: cramers_rule_2x2_mb0405.py  cramers_rule_3x3_mb0406.py  direct_proportions_man_101.py  separable_differential_equations.py
examples/data_science/: __init__.py  curve_fitting_analysis.py  linear_regression_analysis.py  optimization_methods.py
examples/economics/: __init__.py  price_equilibrium_man_101.py  profit_maximization.py  profit_maximization_man_102.py
examples/engineering/: __init__.py  complex_number_analysis.py  differential_equations.py  fourier_analysis.py  inverse_laplace_transform.py  numerical_methods.py  vector_calculus.py
examples/finance/: __init__.py  amortization_tables_301.py  annuities_template.py  compound_interest.py  mate_financiera_105_rendimiento_anual_efectivo_checkpoint.py  mate_financiera_204_renta_checkpoint.py
examples/mathematics/: __init__.py  inverse_laplace_transform.py  linear_equations.py  linear_function_non_rational.py  linear_function_rational.py  p101_edo_separable.py  p203_edo2_homo.py  p205_edo2_ekx.py  p301_fp_lin_nr.py  p301_sinkcosn.py  p302_fp_lin_r.py  p302_tanksecn.py  p303_fp_lin_nr.py  p303_fp_qi.py  p304_fp_lin_r.py  p305_fp_qi.py  second_order_edo_exponential_kernel.py  second_order_homogeneous_edo.py  second_order_homogeneous_edo_203.py  separable_differential_equations.py  statistics.py
examples/physics/: README.md  __init__.py
examples/reconstructed/: README.md  __init__.py  equilibrium_point.py  npv_calculator.py  separable_ode.py
examples/statistics/: __init__.py  chi_square_independence_test.py  correlation_matrix_analysis.py  discrete_correlation_pep201.py  left_tailed_hypothesis_test.py  matrizdecorrelacion_copy1.py  p_value_analysis.py  pep201_corr_discreta.py  probability_distributions.py  right_tailed_hypothesis_test.py  two_tailed_hypothesis_test.py
moodpy/: graphics.py
src/moodpy/: __init__.py  cloze.py  generator.py  graphics.py  matfin.py  tools.py
src/moodpy/subjects/: __init__.py
src/moodpy/subjects/business/: __init__.py
src/moodpy/subjects/economics/: __init__.py  moodpy_man_101_precio_de_equilibrio.py
src/moodpy/subjects/finance/: ________.py  __init__.py  mate_financiera_105_rendimiento_anual_efectivo_checkpoint.py
src/moodpy/subjects/mathematics/: __init__.py  p104_curva_logistica.py
src/moodpy/subjects/statistics/: __init__.py  pep201_corr_discreta.py
tests/: __init__.py  conftest.py  test_cloze.py  test_generator.py  test_graphics.py  test_integration.py  test_matfin.py  test_tools.py
