[project]
name = "moodpy"
version = "2.0.0"
description = "Python library for generating randomized Moodle cloze-type questions with mathematical and financial content"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "tabulate>=0.8.0"
]
authors = [
    {name = "Julio Cesar Hernandez Ochoa", email = "julihocc@gmail.com"}
]
license = {text = "MIT"}
keywords = ["moodle", "education", "mathematics", "finance", "quiz", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[project.urls]
Homepage = "https://github.com/julihocc/moodpy"
Repository = "https://github.com/julihocc/moodpy.git"
Issues = "https://github.com/julihocc/moodpy/issues"
